--- a/HCIAwsSecManagerClients.dproj
+++ b/HCIAwsSecManagerClients.dproj
@@ -71,6 +71,13 @@
         <UWP_DelphiLogo44>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png</UWP_DelphiLogo44>
         <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
         <SanitizedProjectName>HCIAwsSecManagerClients</SanitizedProjectName>
+        <PreBuildEvent><![CDATA[del $(OUTPUTPATH)
+del "$(PROJECTDIR)\$(OUTPUTDIR)HCIAwsLauncher.exe" 
+$(PreBuildEvent)]]></PreBuildEvent>
+        <VerInfo_Locale>1046</VerInfo_Locale>
+        <PostBuildEvent><![CDATA["C:\Program Files (x86)\Windows Kits\10\bin\x86\signtool.exe" sign /f "C:\Users\jpmonoo\Documents\reps\hci-code-sign.pfx" /p "123456" /d "HCI Sistemas Integrados" /du "https://hci.com.br/" /fd sha256 /tr http://timestamp.comodoca.com/?td=sha256 /td sha256 /as "$(OUTPUTPATH)"
+ren "$(OUTPUTPATH)" "HCIAwsLauncher.exe" 
+$(PostBuildEvent)]]></PostBuildEvent>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UsePackage>DBXSqliteDriver;DataSnapServerMidas;DBXDb2Driver;DBXInterBaseDriver;vclactnband;vclFireDAC;svnui;tethering;FireDACADSDriver;DBXMSSQLDriver;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;vcldb;bindcompfmx;svn;Intraweb;DBXOracleDriver;inetdb;FmxTeeUI;emsedge;fmx;fmxdae;vclib;FireDACDBXDriver;dbexpress;IndyCore;vclx;dsnap;DataSnapCommon;DataSnapConnectors;VCLRESTComponents;vclie;bindengine;DBXMySQLDriver;FireDACOracleDriver;FireDACMySQLDriver;DBXFirebirdDriver;FireDACCommonODBC;DataSnapClient;bindcompdbx;IndyIPCommon;vcl;IndyIPServer;DBXSybaseASEDriver;IndySystem;FireDACDb2Driver;dsnapcon;FireDACMSAccDriver;fmxFireDAC;FireDACInfxDriver;vclimg;TeeDB;emshosting;FireDACPgDriver;ibmonitor;FireDACASADriver;FireDACTDataDriver;DBXOdbcDriver;FMXTee;DbxCommonDriver;ibxpress;Tee;DataSnapServer;xmlrtl;DataSnapNativeClient;fmxobj;vclwinx;ibxbindings;rtl;FireDACDSDriver;DbxClientDriver;DBXSybaseASADriver;CustomIPTransport;vcldsnap;bindcomp;appanalytics;DBXInformixDriver;IndyIPClient;bindcompvcl;TeeUI;dbxcds;VclSmp;adortl;FireDACODBCDriver;DataSnapIndy10ServerTransport;dsnapxml;DataSnapProviderClient;dbrtl;inetdbxpress;FireDACMongoDBDriver;IndyProtocols;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
@@ -613,4 +620,36 @@
     <Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
     <Import Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj" Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')"/>
     <Import Project="$(MSBuildProjectName).deployproj" Condition="Exists('$(MSBuildProjectName).deployproj')"/>
+    <PropertyGroup Condition="'$(Config)'=='Debug' And '$(Platform)'=='Win32'">
+        <PreBuildEvent>del $(OUTPUTPATH)&amp;&amp;del &quot;$(PROJECTDIR)\$(OUTPUTDIR)HCIAwsLauncher.exe&quot; </PreBuildEvent>
+        <PreBuildEventIgnoreExitCode>False</PreBuildEventIgnoreExitCode>
+        <PreLinkEvent/>
+        <PreLinkEventIgnoreExitCode>False</PreLinkEventIgnoreExitCode>
+        <PostBuildEvent>&quot;C:\Program Files (x86)\Windows Kits\10\bin\x86\signtool.exe&quot; sign /f &quot;C:\Users\jpmonoo\Documents\reps\hci-code-sign.pfx&quot; /p &quot;123456&quot; /d &quot;HCI Sistemas Integrados&quot; /du &quot;https://hci.com.br/&quot; /fd sha256 /tr http://timestamp.comodoca.com/?td=sha256 /td sha256 /as &quot;$(OUTPUTPATH)&quot;&amp;&amp;ren &quot;$(OUTPUTPATH)&quot; &quot;HCIAwsLauncher.exe&quot; </PostBuildEvent>
+        <PostBuildEventIgnoreExitCode>False</PostBuildEventIgnoreExitCode>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Debug' And '$(Platform)'=='Win64'">
+        <PreBuildEvent>del $(OUTPUTPATH)&amp;&amp;del &quot;$(PROJECTDIR)\$(OUTPUTDIR)HCIAwsLauncher.exe&quot; </PreBuildEvent>
+        <PreBuildEventIgnoreExitCode>False</PreBuildEventIgnoreExitCode>
+        <PreLinkEvent/>
+        <PreLinkEventIgnoreExitCode>False</PreLinkEventIgnoreExitCode>
+        <PostBuildEvent>&quot;C:\Program Files (x86)\Windows Kits\10\bin\x86\signtool.exe&quot; sign /f &quot;C:\Users\jpmonoo\Documents\reps\hci-code-sign.pfx&quot; /p &quot;123456&quot; /d &quot;HCI Sistemas Integrados&quot; /du &quot;https://hci.com.br/&quot; /fd sha256 /tr http://timestamp.comodoca.com/?td=sha256 /td sha256 /as &quot;$(OUTPUTPATH)&quot;&amp;&amp;ren &quot;$(OUTPUTPATH)&quot; &quot;HCIAwsLauncher.exe&quot; </PostBuildEvent>
+        <PostBuildEventIgnoreExitCode>False</PostBuildEventIgnoreExitCode>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Release' And '$(Platform)'=='Win32'">
+        <PreBuildEvent>del $(OUTPUTPATH)&amp;&amp;del &quot;$(PROJECTDIR)\$(OUTPUTDIR)HCIAwsLauncher.exe&quot; </PreBuildEvent>
+        <PreBuildEventIgnoreExitCode>False</PreBuildEventIgnoreExitCode>
+        <PreLinkEvent/>
+        <PreLinkEventIgnoreExitCode>False</PreLinkEventIgnoreExitCode>
+        <PostBuildEvent>&quot;C:\Program Files (x86)\Windows Kits\10\bin\x86\signtool.exe&quot; sign /f &quot;C:\Users\jpmonoo\Documents\reps\hci-code-sign.pfx&quot; /p &quot;123456&quot; /d &quot;HCI Sistemas Integrados&quot; /du &quot;https://hci.com.br/&quot; /fd sha256 /tr http://timestamp.comodoca.com/?td=sha256 /td sha256 /as &quot;$(OUTPUTPATH)&quot;&amp;&amp;ren &quot;$(OUTPUTPATH)&quot; &quot;HCIAwsLauncher.exe&quot; </PostBuildEvent>
+        <PostBuildEventIgnoreExitCode>False</PostBuildEventIgnoreExitCode>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Release' And '$(Platform)'=='Win64'">
+        <PreBuildEvent>del $(OUTPUTPATH)&amp;&amp;del &quot;$(PROJECTDIR)\$(OUTPUTDIR)HCIAwsLauncher.exe&quot; </PreBuildEvent>
+        <PreBuildEventIgnoreExitCode>False</PreBuildEventIgnoreExitCode>
+        <PreLinkEvent/>
+        <PreLinkEventIgnoreExitCode>False</PreLinkEventIgnoreExitCode>
+        <PostBuildEvent>&quot;C:\Program Files (x86)\Windows Kits\10\bin\x86\signtool.exe&quot; sign /f &quot;C:\Users\jpmonoo\Documents\reps\hci-code-sign.pfx&quot; /p &quot;123456&quot; /d &quot;HCI Sistemas Integrados&quot; /du &quot;https://hci.com.br/&quot; /fd sha256 /tr http://timestamp.comodoca.com/?td=sha256 /td sha256 /as &quot;$(OUTPUTPATH)&quot;&amp;&amp;ren &quot;$(OUTPUTPATH)&quot; &quot;HCIAwsLauncher.exe&quot; </PostBuildEvent>
+        <PostBuildEventIgnoreExitCode>False</PostBuildEventIgnoreExitCode>
+    </PropertyGroup>
 </Project>
